fix: spacing of card description

--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,7 +1,8 @@
 .card__description {
   display: flex;
-  padding-bottom: 29px;
-  margin: 13px auto;
+  
+  margin-bottom: 29px;
+  margin: 0 auto 29px;
   justify-content: space-between;
   max-width: 246px;
   min-height: 23px;
